[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waveml-jax"
version = "1.0.0"
description = "Wave-native learning primitives governed by Error Rectification by Alignment (ERA). Reference implementation in JAX."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jesus Carrasco", email = "perry@lightborneintelligence.com"},
]
keywords = [
    "machine-learning",
    "deep-learning",
    "jax",
    "wave-native",
    "signal-processing",
    "era",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/lightborneintelligence/WaveML"
Repository = "https://github.com/lightborneintelligence/WaveML.git"

[tool.hatch.build.targets.wheel]
packages = ["waveml_jax"]
